tests/testdata/run/091_use_define_for_class_fields.ts.out
[WILDCARD]error: TS2729 [ERROR]: Property 'a' is used before its initialization.
  b = this.a;
           ^
[WILDCARD]
